chore: make IDENTITY_ISSUER  a required environment variable

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -14,6 +14,7 @@ OWNER_EMAIL=admin@fonoster.local
 OWNER_PASSWORD=changeme
 
 # Identity Config
+IDENTITY_ISSUER=http://fonoster.local
 IDENTITY_PRIVATE_KEY_PATH=.keys/private.pem
 IDENTITY_PUBLIC_KEY_PATH=.keys/public.pem
 IDENTITY_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fnidentity
