--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,7 @@ services:
       OWNER_EMAIL: ${OWNER_EMAIL}
       OWNER_PASSWORD: ${OWNER_PASSWORD}
       CLOAK_ENCRYPTION_KEY: ${CLOAK_ENCRYPTION_KEY}
+      IDENTITY_ISSUER: ${IDENTITY_ISSUER}
       IDENTITY_DATABASE_URL: ${IDENTITY_DATABASE_URL}
       IDENTITY_WORKSPACE_INVITATION_URL: ${IDENTITY_WORKSPACE_INVITATION_URL}
       IDENTITY_WORKSPACE_INVITATION_FAIL_URL: ${IDENTITY_WORKSPACE_INVITATION_FAIL_URL}
