--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ OWNER_EMAIL=admin@fonoster.local
 OWNER_PASSWORD=changeme
 
 # Identity Config
+IDENTITY_ISSUER=http://fonoster.local
 IDENTITY_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/fnidentity
 IDENTITY_WORKSPACE_INVITATION_URL=http://localhost:8449/api/identity/accept-invite
 IDENTITY_WORKSPACE_INVITATION_FAIL_URL=http://localhost:8080/invite-fail
