--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -38,12 +38,13 @@
     "@fonoster/sdk": "^0.8.52",
     "@fonoster/types": "^0.8.51",
     "@fonoster/voice": "^0.8.52",
-    "@langchain/community": "^0.3.19",
-    "@langchain/core": "^0.3.23",
-    "@langchain/groq": "^0.1.2",
-    "@langchain/ollama": "^0.1.2",
-    "@langchain/openai": "^0.3.14",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.39",
+    "@langchain/groq": "^0.1.3",
+    "@langchain/ollama": "^0.1.5",
+    "@langchain/openai": "^0.4.3",
     "cheerio": "^1.0.0",
+    "cli-table3": "^0.6.5",
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "langchain": "^0.3.6",
