--- a/mods/ctl/package.json
+++ b/mods/ctl/package.json
@@ -53,6 +53,7 @@
     }
   },
   "dependencies": {
+    "@fonoster/autopilot": "^0.8.52",
     "@fonoster/sdk": "^0.8.52",
     "@inquirer/prompts": "^7.1.0",
     "@oclif/core": "^4.0.34",
