fix: include the oclif README while lerna publishing

--- a/mods/ctl/package.json
+++ b/mods/ctl/package.json
@@ -16,8 +16,8 @@
     "build": "tsc -b tsconfig.json",
     "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo",
     "postpack": "rimraf oclif.manifest.json",
-    "prepack": "oclif manifest && oclif readme && git add README.md",
-    "generate:readme": "oclif readme"
+    "prepack": "oclif manifest && generate:readme",
+    "generate:readme": "oclif readme && git add README.md && git commit -m 'chore: update CLI readme' || true"
   },
   "files": [
     "dist"
