fix: include the oclif README while lerna publishing

--- a/mods/ctl/package.json
+++ b/mods/ctl/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf ./dist node_modules tsconfig.tsbuildinfo",
     "postpack": "rimraf oclif.manifest.json",
     "prepack": "oclif manifest && npm run generate:readme",
-    "generate:readme": "oclif readme && git add README.md && git commit -m 'chore: update CLI readme' || true"
+    "generate:readme": "oclif readme && git add README.md && git commit -m 'chore: update CLI readme' --no-verify"
   },
   "files": [
     "dist"
