chore: fix LegacyKeyValueFormat for the Autopilot and APIServer services

--- a/mods/apiserver/Dockerfile
+++ b/mods/apiserver/Dockerfile
@@ -7,7 +7,7 @@ LABEL team="Fonoster Team <team@fonoster.com>"
 WORKDIR /work
 COPY . .
 
-ENV DOCKERIZE_VERSION v0.7.0
+ENV DOCKERIZE_VERSION=v0.7.0
 
 RUN apk add --no-cache --update git \
   && npm install \
