fix: add missing default properties for SDK Client and WebClient

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -21,6 +21,7 @@
 # - ROUTR_EXTERNAL_ADDRS (Your external address)
 # - ROUTR_RTPENGINE_HOST (Your external address)
 # - ASTERISK_SIPPROXY_HOST (Your external address)
+# - APISERVER_ROUTR_API_ENDPOINT (Set to localhost:51907)
 
 DOCKER_HOST_ADDRESS=/* Your external address */
 
@@ -56,11 +57,12 @@ APISERVER_OWNER_EMAIL=admin@fonoster.local
 APISERVER_OWNER_NAME=Admin User
 APISERVER_OWNER_PASSWORD=changeme
 APISERVER_ROOT_DOMAIN=fonoster.local
+APISERVER_ROUTR_API_ENDPOINT=localhost:51907
 APISERVER_SMTP_AUTH_PASS=secret
 APISERVER_SMTP_AUTH_USER=postmaster@fonoster.local
-APISERVER_SMTP_HOST=
-APISERVER_SMTP_PORT=587
-APISERVER_SMTP_SECURE=true
+APISERVER_SMTP_HOST=localhost
+APISERVER_SMTP_PORT=1025
+APISERVER_SMTP_SECURE=false
 APISERVER_SMTP_SENDER="Fonoster Info <info@fonoster.local>"
 APISERVER_TWILIO_ACCOUNT_SID=
 APISERVER_TWILIO_AUTH_TOKEN=
@@ -96,7 +98,7 @@ AUTOPILOT_UNSTRUCTURED_API_URL=
 # The external address must be configured to an address accessible by all endpoints.
 # For local network deployments, this is typically your router's public IP address.
 # For cloud deployments, this is typically the public IP address of your cloud instance.
-ROUTR_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/routr
+ROUTR_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/routr
 ROUTR_EXTERNAL_ADDRS=/* Your external address */
 ROUTR_LOGS_FORMAT=none
 ROUTR_LOGS_LEVEL=verbose
