--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -15,16 +15,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@fonoster/sdk": "^0.9.0",
     "@fontsource/poppins": "^5.1.0",
-    "@mui/icons-material": "5.14.20",
+    "@mui/icons-material": "^6.4.4",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "^6.4.3",
     "@mui/material-nextjs": "^6.4.3",
     "@toolpad/core": "0.12.0",
+    "cookies-next": "^5.1.0",
     "install": "^0.13.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
