chore: simplify the .env.example.dev file

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -15,9 +15,6 @@
 #
 # For development environments, you must set the following environment variables:
 #
-# - APISERVER_IDENTITY_PRIVATE_KEY_PATH
-# - APISERVER_IDENTITY_PUBLIC_KEY_PATH
-# - APISERVER_INTEGRATIONS_FILE
 # - ROUTR_EXTERNAL_ADDRS (Your external address)
 # - ROUTR_RTPENGINE_HOST (Your external address)
 # - ASTERISK_SIPPROXY_HOST (Your external address)
@@ -68,9 +65,9 @@ APISERVER_TWILIO_ACCOUNT_SID=
 APISERVER_TWILIO_AUTH_TOKEN=
 APISERVER_TWILIO_PHONE_NUMBER=
 APISERVER_IDENTITY_USER_VERIFICATION_REQUIRED=false
-APISERVER_IDENTITY_PRIVATE_KEY_PATH=/path/to/private.pem
-APISERVER_IDENTITY_PUBLIC_KEY_PATH=/path/to/public.pem
-APISERVER_INTEGRATIONS_FILE=/path/to/integrations.json
+APISERVER_IDENTITY_PRIVATE_KEY_PATH=.keys/private.pem
+APISERVER_IDENTITY_PUBLIC_KEY_PATH=.keys/public.pem
+APISERVER_INTEGRATIONS_FILE=./config/integrations.json
 
 # Autopilot Settings
 # -----------------
