build: update release workflow to point to new envs

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -122,10 +122,12 @@ jobs:
         cp .env.example .env
         cp config/integrations.example.json config/integrations.json
         sed -i "s|DOCKER_HOST_ADDRESS=.*|DOCKER_HOST_ADDRESS=127.0.0.1|g" .env 
+        sed -i "s|ROUTR_EXTERNAL_ADDRS=.*|ROUTR_EXTERNAL_ADDRS=127.0.0.1|g" .env 
+        sed -i "s|ROUTR_RTPENGINE_HOST=.*|ROUTR_RTPENGINE_HOST=127.0.0.1|g" .env 
         sed -i "s|ASTERISK_SIPPROXY_HOST=.*|ASTERISK_SIPPROXY_HOST=127.0.0.1|g" .env
-        sed -i "s|SMTP_HOST=.*|SMTP_HOST=mailhog|g" .env
-        sed -i "s|SMTP_PORT=.*|SMTP_PORT=1025|g" .env
-        sed -i "s|SMTP_SECURE=.*|SMTP_SECURE=false|g" .env
+        sed -i "s|APISERVER_SMTP_HOST=.*|SMTP_HOST=mailhog|g" .env
+        sed -i "s|APISERVER_SMTP_PORT=.*|SMTP_PORT=1025|g" .env
+        sed -i "s|APISERVER_SMTP_SECURE=.*|SMTP_SECURE=false|g" .env
         docker compose -f compose.yaml -f compose.dev.yaml up -d envoy routr nats postgres apiserver asterisk mailhog
 
     - name: Waiting for services to be ready
