general auth improvements, integration with the fonester sdk, creation of fonester context, hook and custom hooks per entity, hooks for notifications, for ease of use, general improvements
Signed-off-by: Angel M. Bencosme <ing.angelebencosme@gmail.com>

--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
-    "@fonoster/sdk": "^0.9.0",
+    "@fonoster/sdk": "^0.9.1",
     "@fontsource/poppins": "^5.1.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/lab": "5.0.0-alpha.155",
@@ -24,6 +24,7 @@
     "@toolpad/core": "0.12.0",
     "cookies-next": "^5.1.0",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
