chore: add missing envs

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ APISERVER_APP_URL=http://localhost:8080
 APISERVER_ASTERISK_ARI_PROXY_URL=http://asterisk:8088   
 APISERVER_ASTERISK_ARI_SECRET=changeme
 APISERVER_ASTERISK_ARI_USERNAME=ari
+APISERVER_AUTHZ_SERVICE_ENABLED=false
+APISERVER_AUTHZ_SERVICE_HOST=fnauthz
+APISERVER_AUTHZ_SERVICE_PORT=50071
+APISERVER_AUTHZ_SERVICE_METHODS=/fonoster.calls.v1beta2.Calls/CreateCall,/fonoster.identity.v1beta2.Identity/CreateWorkspace
 APISERVER_CLOAK_ENCRYPTION_KEY=k1.aesgcm256.MmPSvzCG9fk654bAbl30tsqq4h9d3N4F11hlue8bGAY=
 APISERVER_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/fonoster
 APISERVER_IDENTITY_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/fnidentity
@@ -52,10 +56,10 @@ APISERVER_SMTP_HOST=your-smtp-server
 APISERVER_SMTP_PORT=587
 APISERVER_SMTP_SECURE=true
 APISERVER_SMTP_SENDER="Fonoster Info <info@fonoster.local>"
-APISERVER_TWILIO_ACCOUNT_SID=your-twilio-account-sid
-APISERVER_TWILIO_AUTH_TOKEN=your-twilio-auth-token
-APISERVER_TWILIO_PHONE_NUMBER=your-twilio-phone-number
-IDENTITY_USER_VERIFICATION_REQUIRED=false
+APISERVER_TWILIO_ACCOUNT_SID=
+APISERVER_TWILIO_AUTH_TOKEN=
+APISERVER_TWILIO_PHONE_NUMBER=
+APISERVER_IDENTITY_USER_VERIFICATION_REQUIRED=false
 
 # Autopilot Settings
 # -----------------
