--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,10 @@ services:
       - APISERVER_ASTERISK_ARI_PROXY_URL
       - APISERVER_ASTERISK_ARI_SECRET
       - APISERVER_ASTERISK_ARI_USERNAME
+      - APISERVER_AUTHZ_SERVICE_ENABLED
+      - APISERVER_AUTHZ_SERVICE_HOST
+      - APISERVER_AUTHZ_SERVICE_PORT
+      - APISERVER_AUTHZ_SERVICE_METHODS
       - APISERVER_CLOAK_ENCRYPTION_KEY
       - APISERVER_DATABASE_URL
       - APISERVER_IDENTITY_DATABASE_URL
@@ -34,6 +38,7 @@ services:
       - APISERVER_TWILIO_ACCOUNT_SID
       - APISERVER_TWILIO_AUTH_TOKEN
       - APISERVER_TWILIO_PHONE_NUMBER
+      - APISERVER_IDENTITY_USER_VERIFICATION_REQUIRED
     expose:
       - 50051:50051
     volumes:
