--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -21,7 +21,9 @@
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "^6.4.3",
     "@mui/material-nextjs": "^6.4.3",
+    "@tanstack/react-table": "^8.21.2",
     "@toolpad/core": "0.12.0",
+    "classnames": "^2.5.1",
     "cookies-next": "^5.1.0",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
