chore: fix default path for the integrations file

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -1,24 +1,12 @@
 # General Notes
 # -------------
-# Please ensure you change the default secrets for all services in production environments.
-# 
-# Secrets (create strong passwords):
-# 
-# - APISERVER_ASTERISK_ARI_SECRET
-# - APISERVER_OWNER_PASSWORD
-# - APISERVER_INFLUXDB_INIT_PASSWORD
-# - ASTERISK_SIPPROXY_SECRET
-# - ASTERISK_ARI_SECRET
-# - POSTGRES_PASSWORD
-# - APISERVER_DATABASE_URL (which includes the password)
-# - APISERVER_IDENTITY_DATABASE_URL (which includes the password)
 #
 # For development environments, you must set the following environment variables:
 #
+# - DOCKER_HOST_ADDRESS (Your external address)
 # - ROUTR_EXTERNAL_ADDRS (Your external address)
 # - ROUTR_RTPENGINE_HOST (Your external address)
 # - ASTERISK_SIPPROXY_HOST (Your external address)
-# - APISERVER_ROUTR_API_ENDPOINT (Set to localhost:51907)
 
 DOCKER_HOST_ADDRESS=/* Your external address */
 
@@ -81,7 +69,7 @@ AUTOPILOT_AWS_S3_ENDPOINT=
 AUTOPILOT_AWS_S3_REGION=
 AUTOPILOT_AWS_S3_SECRET_ACCESS_KEY=
 AUTOPILOT_CONVERSATION_PROVIDER=api
-AUTOPILOT_INTEGRATIONS_FILE=/path/to/integrations.json
+AUTOPILOT_INTEGRATIONS_FILE=./config/integrations.json
 AUTOPILOT_KNOWLEDGE_BASE_ENABLED=false
 AUTOPILOT_LOGS_FORMAT=none
 AUTOPILOT_LOGS_LEVEL=verbose
