Design a page layout to handle the Pages with table. Apply the new styles to all the pages that contains a table
Signed-off-by: Wandy Hernandez <wandyhernandez86@gmail.com>

--- a/mods/webui/.vscode/settings.json
+++ b/mods/webui/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "references.preferredLocation": "view"
+  "references.preferredLocation": "view",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
