--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.0",
     "@fonoster/sdk": "^0.9.1",
     "@fontsource/poppins": "^5.1.0",
+    "@hookform/resolvers": "^4.1.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "^6.4.3",
@@ -28,7 +29,8 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
