--- a/mods/webui/tsconfig.json
+++ b/mods/webui/tsconfig.json
@@ -13,8 +13,14 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"],
+      "@theme/*": ["theme/*"],
+      "@stories/*": ["stories/*"],
+      "@components/*": ["src/common/components/*"],
+      "@layouts/*": ["src/common/components/layout/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "include": [
