changes in some imports to improve the project structure, form logic needs to be integrated with the API.
Signed-off-by: Angel M. Bencosme <ing.angelebencosme@gmail.com>

--- a/mods/webui/tsconfig.json
+++ b/mods/webui/tsconfig.json
@@ -29,7 +29,9 @@
     "src/**/*.tsx",
     "theme/**/*.ts",
     "theme/**/*.d.ts",
-    "types/**/*.d.ts"
+    "types/**/*.d.ts",
+    "stories/**/*.ts",
+    "stories/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
