--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "prisma": "^6.4.1",
+    "protoc-gen-grpc-web": "^1.5.0",
+    "protoc-gen-js": "^3.21.4-4",
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
     "sinon-chai": "^4.0.0",
