--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ APISERVER_IDENTITY_OAUTH2_GITHUB_CLIENT_SECRET=
 APISERVER_IDENTITY_OAUTH2_GITHUB_ENABLED=false
 APISERVER_IDENTITY_WORKSPACE_INVITE_FAIL_URL=http://localhost:8080/invite-fail
 APISERVER_IDENTITY_WORKSPACE_INVITE_URL=http://localhost:8449/api/identity/accept-invite
+APISERVER_IDENTITY_RESET_PASSWORD_URL=http://localhost:8449/api/identity/reset-password
 APISERVER_IDENTITY_WORKSPACE_INVITE_EXPIRATION=1d
 APISERVER_IDENTITY_USER_VERIFICATION_REQUIRED=false
 APISERVER_INFLUXDB_INIT_ORG=fonoster
