--- a/compose.yaml
+++ b/compose.yaml
@@ -19,6 +19,7 @@ services:
       - APISERVER_IDENTITY_WORKSPACE_INVITE_EXPIRATION
       - APISERVER_IDENTITY_WORKSPACE_INVITE_FAIL_URL
       - APISERVER_IDENTITY_WORKSPACE_INVITE_URL
+      - APISERVER_IDENTITY_RESET_PASSWORD_URL
       - APISERVER_INFLUXDB_INIT_ORG
       - APISERVER_INFLUXDB_INIT_PASSWORD
       - APISERVER_INFLUXDB_INIT_TOKEN
