--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.5",
     "js-yaml": "^4.1.0",
     "langchain": "^0.3.6",
+    "moment": "^2.30.1",
     "onnxruntime-node": "^1.19.0",
     "pdf-parse": "^1.1.1",
     "uuid": "^11.0.3",
