--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^6.4.3",
     "@mui/material-nextjs": "^6.4.3",
     "@tanstack/react-table": "^8.21.2",
+    "@phosphor-icons/react": "2.0.15",
     "@toolpad/core": "0.12.0",
     "classnames": "^2.5.1",
     "cookies-next": "^5.1.0",
