add app sidebar options
Signed-off-by: Wandy Hernandez <wandyhernandez86@gmail.com>

--- a/mods/webui/.vscode/settings.json
+++ b/mods/webui/.vscode/settings.json
@@ -4,5 +4,8 @@
   "references.preferredLocation": "view",
   "[typescriptreact]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   }
 }
