fix: add missing reference to logger and sdk modules

--- a/mods/webui/tsconfig.json
+++ b/mods/webui/tsconfig.json
@@ -46,5 +46,13 @@
     ".next",
     "out",
     "dist"
+  ],
+  "references": [
+    {
+      "path": "../logger",
+    },
+    {
+      "path": "../sdk",
+    }
   ]
 }
