chore: improve envs descriptions for dev and prod

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
 # General Notes
 # -------------
+#
+# You must set the following variables to the IP address of the host machine:
+#
+# - ROUTR_EXTERNAL_ADDRS
+# - ROUTR_RTPENGINE_HOST
+# - ASTERISK_SIPPROXY_HOST
+#
+# Note: If you are running in a cloud environment, this will be the public IP address of your server.
+# If you are running locally, this will be the IP address of your local machine.
+#
 # Please ensure you change the default secrets for all services in production environments.
 # 
 # Secrets (create strong passwords):
@@ -12,7 +22,6 @@
 # - POSTGRES_PASSWORD
 # - APISERVER_DATABASE_URL (which includes the database password)
 # - APISERVER_IDENTITY_DATABASE_URL (which includes the database password)
-
 
 # API Server Settings
 # ------------------
