--- a/.env.example.dev
+++ b/.env.example.dev
@@ -7,6 +7,7 @@
 # - ROUTR_EXTERNAL_ADDRS (Your external address)
 # - ROUTR_RTPENGINE_HOST (Your external address)
 # - ASTERISK_SIPPROXY_HOST (Your external address)
+# - APISERVER_ROUTR_API_ENDPOINT (localhost:51907)
 
 DOCKER_HOST_ADDRESS=/* Your external address */
 
