--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -19,11 +19,11 @@
     "@fontsource/poppins": "^5.1.0",
     "@hookform/resolvers": "^4.1.0",
     "@mui/icons-material": "^6.4.4",
-    "@mui/lab": "5.0.0-alpha.155",
     "@mui/material": "^6.4.3",
     "@mui/material-nextjs": "^6.4.3",
-    "@tanstack/react-table": "^8.21.2",
     "@phosphor-icons/react": "2.0.15",
+    "@storybook/addon-links": "^8.6.2",
+    "@tanstack/react-table": "^8.21.2",
     "@toolpad/core": "0.12.0",
     "classnames": "^2.5.1",
     "cookies-next": "^5.1.0",
