--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -36,22 +36,23 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3",
     "@emotion/babel-plugin": "^11.13.5",
     "@eslint/eslintrc": "^3",
     "@storybook/addon-designs": "^8.1.0",
-    "@storybook/addon-docs": "^8.5.3",
-    "@storybook/addon-essentials": "^8.5.3",
-    "@storybook/addon-interactions": "^8.5.3",
-    "@storybook/addon-onboarding": "^8.5.3",
-    "@storybook/addon-themes": "^8.5.3",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/blocks": "^8.5.3",
-    "@storybook/manager-api": "^8.5.3",
-    "@storybook/nextjs": "^8.5.3",
-    "@storybook/react": "^8.5.3",
-    "@storybook/react-vite": "^8.5.3",
-    "@storybook/test": "^8.5.3",
-    "@storybook/theming": "^8.5.3",
+    "@storybook/addon-docs": "^8.6.2",
+    "@storybook/addon-essentials": "^8.6.2",
+    "@storybook/addon-interactions": "^8.6.2",
+    "@storybook/addon-onboarding": "^8.6.2",
+    "@storybook/addon-themes": "^8.6.2",
+    "@storybook/blocks": "^8.6.2",
+    "@storybook/manager-api": "^8.6.2",
+    "@storybook/nextjs": "^8.6.2",
+    "@storybook/react": "^8.6.2",
+    "@storybook/react-vite": "^8.6.2",
+    "@storybook/test": "^8.6.2",
+    "@storybook/theming": "^8.6.2",
+    "@storybook/types": "^8.6.2",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
@@ -61,7 +62,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
     "prettier": "3.5.0",
-    "storybook": "^8.5.3",
+    "storybook": "^8.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
