build: create guardrail for failing unit tests

--- a/.github/workflows/test-sdk-install.yaml
+++ b/.github/workflows/test-sdk-install.yaml
@@ -1,13 +1,9 @@
 name: test sdk install
 
 on:
-  # avoid this for now
-  # push:
-  #   branches:
-  #     - main
-  # pull_request:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
