chore: improve the test-sdk-install workflow

--- a/.github/workflows/test-sdk-install.yaml
+++ b/.github/workflows/test-sdk-install.yaml
@@ -4,6 +4,12 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'mods/common/**'
+      - 'mods/types/**'
+      - 'mods/sdk/**'
+      - 'package.json'
+      - 'package-lock.json'
   workflow_dispatch:
 
 jobs:
