chore: wip improving linting and formatting

--- a/mods/ctl/tsconfig.json
+++ b/mods/ctl/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
-  },
   "references": [
     {
       "path": "../logger",
@@ -13,6 +9,9 @@
     },
     {
       "path": "../sdk"
+    },
+    {
+      "path": "../autopilot"
     }
   ],
   "exclude": ["node_modules", "dist", "test"]
