--- a/mods/autopilot/package.json
+++ b/mods/autopilot/package.json
@@ -43,6 +43,7 @@
     "@langchain/groq": "^0.1.3",
     "@langchain/ollama": "^0.1.6",
     "@langchain/openai": "^0.4.4",
+    "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
     "cli-table3": "^0.6.5",
     "dotenv": "^16.4.5",
@@ -54,9 +55,6 @@
     "uuid": "^11.0.3",
     "xstate": "^5.17.3",
     "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "typescript": "^5.5.4"
   },
   "gitHead": "d4aa82f7926c0f451d2f580c59ab812c74a7f579"
 }
