--- a/mods/common/package.json
+++ b/mods/common/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.13",
+    "pb-util": "^1.0.3",
     "twilio": "^5.3.4",
     "validator": "^13.12.0",
     "zod-validation-error": "^3.3.0"
