--- a/mods/ctl/tsconfig.json
+++ b/mods/ctl/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "src"
+  },
   "references": [
     {
       "path": "../logger",
