improvements in env documentation and adding variables to the env.
Signed-off-by: Angel M. Bencosme <ing.angelbencosme@gmail.com>

--- a/mods/webui/.env.example
+++ b/mods/webui/.env.example
@@ -11,18 +11,24 @@ NEXT_PUBLIC_FONOSTER_REGION=NYC01
 
 # Required: GitHub OAuth Client ID
 # This is the client ID provided by GitHub when you register your OAuth application
+# You can get it at: GitHub → Settings → Developer settings → OAuth Apps
 NEXT_PUBLIC_GITHUB_CLIENT_ID=
 
 # Required: GitHub OAuth Authorization URL
 # Base URL for GitHub's OAuth flow
-# Note: You'll need to append client_id, redirect_uri, and scope parameters when using this URL
 NEXT_PUBLIC_GITHUB_URL=https://github.com/login/oauth/authorize
 
-# Additional Required Variables (not set) SIGNIN:
+# IMPORTANT: Sign In redirect configuration
+# This URL must match EXACTLY with the URL configured in GitHub
+# In GitHub: Settings → Developer settings → OAuth Apps → Your App → "Authorization callback URL"
+# If you have multiple URLs, separate them with commas in the GitHub configuration
 NEXT_PUBLIC_GITHUB_SIGNIN_REDIRECT_URI=/workspace
 NEXT_PUBLIC_GITHUB_SIGNIN_SCOPE=read:user
 
-# Additional Required Variables (not set) SIGNUP:
+# IMPORTANT: Sign Up redirect configuration
+# This URL must match EXACTLY with the URL configured in GitHub
+# Example: If you use http://localhost:3000/signup, you must add this exact URL in GitHub
+# The complete URL would be: http://localhost:3000/signup (without trailing slashes)
 NEXT_PUBLIC_GITHUB_SIGNUP_REDIRECT_URI=/workspace
 NEXT_PUBLIC_GITHUB_SIGNUP_SCOPE=user:email
 
