--- a/mods/webui/.env.example
+++ b/mods/webui/.env.example
@@ -1,34 +1,25 @@
+# Frontend Configuration
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
-# Required: Fonoster Region
+
+# Fonoster Configuration
 NEXT_PUBLIC_FONOSTER_REGION=NYC01
+# NEXT_PUBLIC_FONOSTER_URL=https://api.fonoster.com  # Optional custom API URL
 
-# Optional: Custom Fonoster API URL
-# If not provided, the SDK will use its default URL
-# NEXT_PUBLIC_FONOSTER_URL=https://api.fonoster.com
+# OAuth Configuration
+# ------------------
 
-# GitHub OAuth2 Configuration
-# --------------------------
+# OAuth Global Settings
+NEXT_PUBLIC_OAUTH_REDIRECT_URI=/oauth/callback  # Central callback path for all OAuth providers
 
-# Required: GitHub OAuth Client ID
-# This is the client ID provided by GitHub when you register your OAuth application
-# You can get it at: GitHub → Settings → Developer settings → OAuth Apps
-NEXT_PUBLIC_GITHUB_CLIENT_ID=
+# GitHub OAuth Settings
+NEXT_PUBLIC_GITHUB_CLIENT_ID=                   # Your GitHub OAuth App Client ID
+NEXT_PUBLIC_GITHUB_URL=https://github.com/login/oauth/authorize  # GitHub OAuth base URL
 
-# Required: GitHub OAuth Authorization URL
-# Base URL for GitHub's OAuth flow
-NEXT_PUBLIC_GITHUB_URL=https://github.com/login/oauth/authorize
+# GitHub Sign In Configuration
+NEXT_PUBLIC_GITHUB_SIGNIN_REDIRECT_URI=/workspace  # Where to redirect after successful signin
+NEXT_PUBLIC_GITHUB_SIGNIN_SCOPE=read:user         # Permissions needed for signin
 
-# IMPORTANT: Sign In redirect configuration
-# This URL must match EXACTLY with the URL configured in GitHub
-# In GitHub: Settings → Developer settings → OAuth Apps → Your App → "Authorization callback URL"
-# If you have multiple URLs, separate them with commas in the GitHub configuration
-NEXT_PUBLIC_GITHUB_SIGNIN_REDIRECT_URI=/workspace
-NEXT_PUBLIC_GITHUB_SIGNIN_SCOPE=read:user
-
-# IMPORTANT: Sign Up redirect configuration
-# This URL must match EXACTLY with the URL configured in GitHub
-# Example: If you use http://localhost:3000/signup, you must add this exact URL in GitHub
-# The complete URL would be: http://localhost:3000/signup (without trailing slashes)
-NEXT_PUBLIC_GITHUB_SIGNUP_REDIRECT_URI=/workspace
-NEXT_PUBLIC_GITHUB_SIGNUP_SCOPE=user:email
+# GitHub Sign Up Configuration
+NEXT_PUBLIC_GITHUB_SIGNUP_REDIRECT_URI=/workspace # Where to redirect after successful signup
+NEXT_PUBLIC_GITHUB_SIGNUP_SCOPE=user:email       # Permissions needed for signup
 
