--- a/mods/webui/package.json
+++ b/mods/webui/package.json
@@ -64,6 +64,7 @@
     "prettier": "3.5.0",
     "storybook": "^8.6.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^6.2.0"
   }
 }
