--- a/.env.example.dev
+++ b/.env.example.dev
@@ -130,3 +130,9 @@ INFLUXDB_INIT_USERNAME=influxdb
 # For production environments, we recommend using a managed database service.
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
+
+# MCP Settings
+# ------------
+MCP_WORKSPACE_ACCESS_KEY_ID=
+MCP_ACCESS_KEY_ID=
+MCP_ACCESS_KEY_SECRET=
