chore: wip Fonoster MCP Server

--- a/.env.example.dev
+++ b/.env.example.dev
@@ -133,6 +133,6 @@ POSTGRES_USER=postgres
 
 # MCP Settings
 # ------------
-MCP_WORKSPACE_ACCESS_KEY_ID=
-MCP_ACCESS_KEY_ID=
-MCP_ACCESS_KEY_SECRET=
+WORKSPACE_ACCESS_KEY_ID=
+APIKEY_ACCESS_KEY_ID=
+APIKEY_ACCESS_KEY_SECRET=
